[package]
name = "elc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
itertools = "0.14.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
to_and_fro = "0.7.1"
tokio = { version = "1.44.2", features = ["full"] }
